# falcon-riscv

./: Cargo.toml
lib/: decoder.rs  instruction.rs  lib.rs  register.rs  test.rs
